syntax = "proto3";
option java_package = "orbit.shared.proto";

import "google/protobuf/timestamp.proto";

package orbit.shared;

service NodeManagement {
    rpc JoinCluster (JoinClusterRequest) returns (NodeLease);
    rpc RenewLease (RenewLeaseRequest) returns (RenewLeaseResponse);
}

message JoinClusterRequest {
    NodeCapabilities capabilities = 1;
}

message RenewLeaseRequest {
    string challenge_token = 1;
    NodeCapabilities capabilities = 2;
}

message RenewLeaseResponse {
    bool lease_renewed = 1;
    NodeLease lease_info = 2;
}

message NodeLease {
    string node_identity = 1;
    string challenge_token = 2;
    google.protobuf.Timestamp renew_at = 3;
    google.protobuf.Timestamp expires_at = 4;
}

message NodeInfo {
    oneof content {
        ServerNodeInfo server = 1;
        ClientNodeInfo client = 2;
    }
}

message ServerNodeInfo {
    string id = 1;
    NodeCapabilities capabilities = 2;
    NodeLease lease = 3;
    repeated string visibleNodes = 4;
    int32 port = 5;
    string host = 6;
}

message ClientNodeInfo {
    string id = 1;
    NodeCapabilities capabilities = 2;
    NodeLease lease = 3;
    repeated string visibleNodes = 4;
}

message NodeCapabilities {
    repeated string addressableTypes = 1;
}